--- a/forms/settings-dialog.ui
+++ b/forms/settings-dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>407</width>
-    <height>175</height>
+    <width>524</width>
+    <height>239</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -80,14 +80,31 @@
       </widget>
      </item>
      <item row="5" column="1">
-       <widget class="QCheckBox" name="debugEnabled">
-         <property name="text">
-           <string>OBSWebsocket.Settings.DebugEnable</string>
-         </property>
-         <property name="checked">
-           <bool>false</bool>
-         </property>
-       </widget>
+      <widget class="QCheckBox" name="debugEnabled">
+       <property name="text">
+        <string>OBSWebsocket.Settings.DebugEnable</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>OBSWebsocket.Settings.ServerUrl</string>
+       </property>
+      </widget>
+     </item>
+     <item row="6" column="1">
+      <widget class="QLineEdit" name="serverUrl">
+       <property name="minimumSize">
+        <size>
+         <width>250</width>
+         <height>0</height>
+        </size>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
