--- a/forms/settings-dialog.ui
+++ b/forms/settings-dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>524</width>
-    <height>239</height>
+    <height>252</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -28,27 +28,6 @@
    </property>
    <item>
     <layout class="QFormLayout" name="formLayout">
-     <item row="3" column="1">
-      <widget class="QCheckBox" name="authRequired">
-       <property name="text">
-        <string>OBSWebsocket.Settings.AuthRequired</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="lbl_password">
-       <property name="text">
-        <string>OBSWebsocket.Settings.Password</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="password">
-       <property name="echoMode">
-        <enum>QLineEdit::Password</enum>
-       </property>
-      </widget>
-     </item>
      <item row="1" column="1">
       <widget class="QCheckBox" name="serverEnabled">
        <property name="text">
@@ -79,6 +58,27 @@
        </property>
       </widget>
      </item>
+     <item row="3" column="1">
+      <widget class="QCheckBox" name="authRequired">
+       <property name="text">
+        <string>OBSWebsocket.Settings.AuthRequired</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="lbl_password">
+       <property name="text">
+        <string>OBSWebsocket.Settings.Password</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QLineEdit" name="password">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
+      </widget>
+     </item>
      <item row="5" column="1">
       <widget class="QCheckBox" name="debugEnabled">
        <property name="text">
@@ -89,14 +89,21 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
+     <item row="6" column="1">
+      <widget class="QCheckBox" name="remoteServerEnabled">
+       <property name="text">
+        <string>OBSWebsocket.Settings.RemoteServerEnable</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>OBSWebsocket.Settings.ServerUrl</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="7" column="1">
       <widget class="QLineEdit" name="serverUrl">
        <property name="minimumSize">
         <size>
